--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,60 +1,43 @@
 name: simple_habits
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.5+5
 
 environment:
-    sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
 
 dependencies:
-    flutter:
-        sdk: flutter
-    intl: ^0.16.1
-    weekday_selector: ^0.4.0
-    sqflite: ^1.3.0
-    path_provider: ^1.6.14
-    flutter_slidable: ^0.5.7
-    equatable: ^1.2.5
-    flutter_local_notifications: ^1.4.4+4
-    shared_preferences: ^0.5.12
-    share: ^0.6.5+2
-    url_launcher: ^5.7.2
-    launch_review: ^2.0.0
-    flutter_bloc: ^6.0.5
-    
+  flutter:
+    sdk: flutter
+  intl: any
+  weekday_selector: any
+  flutter_bloc: any
+  flutter_local_notifications: any
+  flutter_slidable: any
+  shared_preferences: any
+  sqflite: any
+  path_provider: any
+  url_launcher: any
+  share_plus: any  # Use this instead of share
+
 dev_dependencies:
-    flutter_test:
-        sdk: flutter
+  flutter_test:
+    sdk: flutter
 
 flutter:
-    assets:
-        - assets/img/
-    fonts:
-        - family: Poppins
-          fonts:
-              - asset: assets/fonts/Poppins-Regular.ttf
-                weight: 400
-              - asset: assets/fonts/Poppins-Bold.ttf
-                weight: 700
-              - asset: assets/fonts/Poppins-SemiBold.ttf
-                weight: 600
-              - asset: assets/fonts/Poppins-Italic.ttf
-                style: italic
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
-    uses-material-design: true
+  assets:
+    - assets/img/
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Italic.ttf
+          style: italic
+  uses-material-design: true
